Fix spacings for WhatNext items that don't have Pictures.

--- a/src/app/components/WhatNext/index.scss
+++ b/src/app/components/WhatNext/index.scss
@@ -51,6 +51,10 @@
     text-transform: none;
     transition: color 0.25s;
 
+    &:first-child {
+      margin: -0.25rem 0 0;
+    }
+
     & > span {
       white-space: nowrap;
 
